# django-getpaid-payu

./: pyproject.toml  requirements_test.txt
getpaid_payu/: client.py  processor.py  views.py
