[tool.poetry]
name = "django-getpaid-payu"
version = "0.2.1"
description = "Django-GetPaid plugin for PayU service."
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/django-getpaid/django-getpaid-payu"
packages = [
    { include = "getpaid_payu" }
]


[tool.poetry.dependencies]
python = "^3.8"
django-getpaid = "^2.3.0"
requests = "^2.31.0"
swapper = "^1.3.0"
typing-extensions = "^4.8.0"


[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"
factory-boy = "^3.3.0"
black = "^23.9.0"
tox = "^4.8.0"
ipdb = "^0.13.11"
pytest = {version = "^7.4.0", optional = true}
codecov = {version = "^2.1.11", optional = true}
coverage = {version = "^7.3.0", optional = true}
requests-mock = {version = "^1.11.0", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}
pytest-django = {version = "^4.5.0", optional = true}


[tool.poetry.extras]
test = ["pytest", "codecov", "coverage", "requests-mock", "pytest-cov", "pytest-django"]


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.cache
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | docs
    | migrations
  )/

)
'''


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
known_first_party = ["getpaid_payu"]
known_third_party = ["django", "django_fsm", "factory", "getpaid", "orders", "paywall", "pendulum", "pytest", "pytest_factoryboy", "requests", "swapper", "typing_extensions"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
